--- a/Shop.html
+++ b/Shop.html
@@ -12,38 +12,52 @@
           <li><a href="index.html">Home</a></li>
           <li><a href="Shop.html">Kelp-Shop</a></li>
           <li><a href="About_Us.html">About Us</a></li>
-          <li><a href="Conduct_Us.html">Contact Us</a></li>
+          <li><a href="Reviews.html">Reviews</a></li>
         </ul>
       </nav>
     </header>
     <main>
-      <section>
-        <h2>Shop</h2>
-        <p>Below are our top-selling kelp products. Click on a product to learn more and make a purchase.</p>
-        <ul>
-          <li>
-            <img src="images/kelp1.jpg" alt="Kelp Product 1">
-            <h3>Kelp Product 1</h3>
-            <p>Description of Kelp Product 1.</p>
-            <p>Price: $X.XX</p>
-            <button>Add to Cart</button>
-          </li>
-          <li>
-            <img src="images/kelp2.jpg" alt="Kelp Product 2">
-            <h3>Kelp Product 2</h3>
-            <p>Description of Kelp Product 2.</p>
-            <p>Price: $X.XX</p>
-            <button>Add to Cart</button>
-          </li>
-          <li>
-            <img src="images/kelp3.jpg" alt="Kelp Product 3">
-            <h3>Kelp Product 3</h3>
-            <p>Description of Kelp Product 3.</p>
-            <p>Price: $X.XX</p>
-            <button>Add to Cart</button>
-          </li>
-        </ul>
-      </section>
+      <table id="table">
+        <thead height="200">
+          <tr>
+            <th width="600"> </th>
+            <th width="600">Product Code</th>
+            <th width="600">Burning Time</th>
+            <th width="600">Price</th>
+            <th widht="600"> </th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr>
+            <td width="600"><img src="/images/x16_kelp_block.png" height="100"></td>
+            <td width="600">x16 Blocks of Kelp</td>
+            <td width="600">3,200 seconds <br> 64,000 ticks <br> 320 items</td>
+            <td width="600">2 emeralds / <br> 6 iron ingots</td>
+            <td width="600"><button>Add to Cart</button></td>
+          </tr>
+          <tr>
+            <td width="600" height="250"><img src="/images/x32_kelp_block.png" height="100"></td>
+            <td width="600">x16 Blocks of Kelp</td>
+            <td width="600">6,500 seconds <br> 128,000 <br> 640 items</td>
+            <td width="600">3 emeralds / <br> 10 iron ingots</td>
+            <td width="600"><button>Add to Cart</button></td>
+          </tr>
+          <tr>
+            <td width="600" height="250"><img src="/images/x48_kelp_block.png" height="100"></td>
+            <td width="600">x48 Blocks of Kelp</td>
+            <td width="600">9,600 seconds <br> 192,000 ticks <br> 960 items</td>
+            <td width="600">5 emeralds / <br> 18 iron ingots</td>
+            <td width="600"><button>Add to Cart</button></td>
+          </tr>
+          <tr>
+            <td width="600" height="250"><img src="/images/x64_kelp_block.png" height="100"></td>
+            <td width="600">x64 Blocks of Kelp</td>
+            <td width="600">12,800 seconds <br> 256,000 ticks <br> 1,280 items</td>
+            <td width="600">7 emeralds / <br> 26 iron ingots</td>
+            <td width="600"><button>Add to Cart</button></td>
+          </tr>
+        </tbody>
+      </table>
     </main>
     <footer>
       <p>&copy; 2023 Kelp Shop. All rights reserved. 
