--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     </header>
     <main>
       <section>
-        <a href="#"><img src="/Kelp_Website/images/kelp(1).jpg" height="360" width="640"></a>
+        <img src="/images/kelp(1).jpg" height="360" width="640"></a>
       </section>
       <section id="banner">
         <h2>Welcome to Kelp Shop!</h2>
