--- a/Shop.html
+++ b/Shop.html
@@ -2,7 +2,8 @@
 <html>
   <head>
     <title>Shop - Kelp Shop</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="style.css">
+    <script src="Shop.js"></script>
   </head>
   <body>
     <header>
