--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <title>Kelp Shop Home Page</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="style.css">
     <script src="script.js"></script>
   </head>
   <body>
@@ -13,7 +13,7 @@
           <li><a href="index.html">Home</a></li>
           <li><a href="Shop.html">Kelp-Shop</a></li>
           <li><a href="About_Us.html">About Us</a></li>
-          <li><a href="Contact_Us.html">Contact Us</a></li>
+          <li><a href="Reviews.html">Reviews</a></li>
         </ul>
       </nav>
     </header>
