--- a/Reviews.html
+++ b/Reviews.html
@@ -20,23 +20,129 @@
 	  </header>
 	<main>
 		<section class="review">
-			<h2>Best kelp ever!</h2>
-			<p>As someone who spends a lot of time underwater in Minecraft, I've tried a lot of different types of kelp, and Minecraft Kelp Co.'s kelp is by far the best. It's so crisp and refreshing, and it's perfect for making dried kelp blocks for all of my building needs. Highly recommend!</p>
-			<p class="author">- Steve</p>
+			<h2>Review</h2>
+			<p>Congratulations on being the first business to open in hc land.</p>
+					
+			<p>Customer Service: <span class="fa fa-star checked"></span>
+				<span class="fa fa-star checked"></span>
+				<span class="fa fa-star checked"></span>
+				<span class="fa fa-star checked"></span>
+				<span class="fa fa-star checked"></span></p>
+			<p>Stock: <span class="fa fa-star checked"></span>
+				<span class="fa fa-star checked"></span>
+				<span class="fa fa-star checked"></span>
+				<span class="fa fa-star checked"></span>
+				<span class="fa fa-star checked"></span></p>
+			<p>Pricing: <span class="fa fa-star checked"></span>
+				<span class="fa fa-star checked"></span>
+				<span class="fa fa-star checked"></span>
+				<span class="fa fa-star checked"></span>
+				<span class="fa fa-star checked"></span></p>
+				
+			<p class="author">- ZeroQL</p>
 		</section>
+
 		<section class="review">
-			<h2>Great customer service</h2>
-			<p>I had a small issue with my order, and the customer service team at Minecraft Kelp Co. was incredibly helpful and friendly. They resolved my issue quickly and went above and beyond to make sure I was satisfied with my purchase. I'll definitely be ordering from them again!</p>
+			<h2>Review</h2>
+			<p>10/10 kelps 10/10 experience.</p>
+			<p>Customer Service: <span class="fa fa-star checked"></span>
+				<span class="fa fa-star checked"></span>
+				<span class="fa fa-star checked"></span>
+				<span class="fa fa-star checked"></span>
+				<span class="fa fa-star checked"></span></p>
+			<p>Stock: <span class="fa fa-star checked"></span>
+				<span class="fa fa-star checked"></span>
+				<span class="fa fa-star checked"></span>
+				<span class="fa fa-star checked"></span>
+				<span class="fa fa-star checked"></span></p>
+			<p>Pricing: <span class="fa fa-star checked"></span>
+				<span class="fa fa-star checked"></span>
+				<span class="fa fa-star checked"></span>
+				<span class="fa fa-star checked"></span>
+				<span class="fa fa-star checked"></span></p>
 			<p class="author">- Alex</p>
 		</section>
-		<section class="review">
-			<h2>Not impressed</h2>
-			<p>Sorry to say, but I wasn't impressed with Minecraft Kelp Co.'s kelp. It was a little too salty for my taste, and it didn't seem as fresh as some of the other kelp I've tried. I'll be sticking with my usual supplier for now.</p>
-			<p class="author">- Emily</p>
+		<section>
+			<!-- Add icon library -->
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+
+<span class="heading">User Rating</span>
+<span class="fa fa-star checked"></span>
+<span class="fa fa-star checked"></span>
+<span class="fa fa-star checked"></span>
+<span class="fa fa-star checked"></span>
+<span class="fa fa-star checked"></span>
+<p>5.0 average based on 2 reviews.</p>
+<hr style="border:3px solid #f1f1f1">
+
+<div class="row">
+  <div class="side">
+    <div>5 star</div>
+  </div>
+  <div class="middle">
+    <div class="bar-container">
+      <div class="bar-5"></div>
+    </div>
+  </div>
+  <div class="side right">
+    <div>2</div>
+  </div>
+  <div class="side">
+    <div>4 star</div>
+  </div>
+  <div class="middle">
+    <div class="bar-container">
+      <div class="bar-4"></div>
+    </div>
+  </div>
+  <div class="side right">
+    <div>0</div>
+  </div>
+  <div class="side">
+    <div>3 star</div>
+  </div>
+  <div class="middle">
+    <div class="bar-container">
+      <div class="bar-3"></div>
+    </div>
+  </div>
+  <div class="side right">
+    <div>0</div>
+  </div>
+  <div class="side">
+    <div>2 star</div>
+  </div>
+  <div class="middle">
+    <div class="bar-container">
+      <div class="bar-2"></div>
+    </div>
+  </div>
+  <div class="side right">
+    <div>0</div>
+  </div>
+  <div class="side">
+    <div>1 star</div>
+  </div>
+  <div class="middle">
+    <div class="bar-container">
+      <div class="bar-1"></div>
+    </div>
+  </div>
+  <div class="side right">
+    <div>0</div>
+  </div>
+</div>
 		</section>
 	</main>
 	<footer>
-		<p>&copy; 2023 Minecraft Kelp Co.</p>
-	</footer>
+		<p>&copy; 2023 Kelp Shop. All rights reserved. 
+		  <br>
+		  GNU General Public License v3.0
+		  <br><br>
+		  Not a real company, just a project for Hack Club
+		  <br>
+		  * Not really</p>
+		  <img src="/images/Kelp.webp" id="gif">
+	  </footer>
 </body>
 </html>
