--- a/index.html
+++ b/index.html
@@ -50,6 +50,7 @@
         Not a real company, just a project for Hack Club
         <br>
         * Not really</p>
+        <img src="/images/Kelp.webp" id="gif">
     </footer>
   </body>
 </html>
