--- a/About_Us.html
+++ b/About_Us.html
@@ -53,15 +53,13 @@
     </main>
     
     <footer>
-
-      <p id="foot">&copy; 2023 Kelp Shop. All rights reserved. 
+      <p>&copy; 2023 Kelp Shop. All rights reserved. 
         <br>
         GNU General Public License v3.0
         <br><br>
         Not a real company, just a project for Hack Club
         <br>
         * Not really</p>
-        
         <img src="/images/Kelp.webp" id="gif">
     </footer>
   </body>
